# OpenGLBaseTemplate

./: .gitmodules  CMakeLists.txt  README.md  build.sh
dependencies/includes/glad/: glad.h
dependencies/libs/GLFW/: glfw3.lib
dependencies/source/glad/: glad.c
source/: main.cpp
